# pba-book

./: .dprint.json  .editorconfig  .gitignore  .mlc.toml  .prettierignore  .prettierrc.js  .yarnrc.yml  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  Makefile.toml  README.md  SECURITY.md  book.toml  bun.lockb  dprint.json  package.json  reveal-md.json  reveal.json
.github/: CODEOWNERS
.github/workflows/: checks.yml  link-check.yml  mlc_config.json  pages.yml
assets/img/: README.md
assets/plugin/: mermaid-theme.js  mermaid.js  tailwindcss.min.js
assets/styles/: PBA-theme.css  custom-classes.css
assets/templates/: listing-template.html  slide-template.html
content/: 404.md  CODE-OF-CONDUCT.md  LICENSE.md  README.md  SUMMARY.md  additional.md  overview.md
content/1-Cryptography/: 1-Intro-slides.md  10-Advanced_ZK_proofs-slides.md  11-Cryptography_In_Context-slides.md  2-Addresses-slides.md  3-Hashes-slides.md  4-Encryption-slides.md  5-Basic_Signatures-slides.md  6-Advanced_Signatures-slides.md  7-Hash_Based_Data_Structures-slides.md  8-Exotic_Primitives-slides.md  9-ZK_Proofs-slides.md  README.md  index.md
content/2-Economics/: 1-Economics_Basics-slides.md  2-Game_Theory-slides.md  3-Price_Finding_Mechanisms-slides.md  4-Economics_of_Polkadot-slides.md  README.md  index.md
content/3-Blockchain/: 1-Coordination_And_Centralization-slides.md  2-P2P_Networks-slides.md  2.5-State_Machines-slides.md  3-Blockchain_Structure-slides.md  4-Accounts_and_UTXOs-slides.md  5-Consensus-Authoring-slides.md  6-Econ_and_Game_Theory_in_Blockchain-slides.md  7-Forks-slides.md  8-Consensus_Finality-slides.md  9-Light_Clients_and_Bridges-slides.md  Manual_Consenus_Activity.md  README.md
content/4-Core_and_Basics/: 2-JSON-RPC-slides.md  2-Metadata-slides.md  2-Runtime-slides.md  2-scale-slides.md  index.md
content/5-PVM-Polkadot-Architecture-and-Smart-Contracts/: 1-Polkadot_Architecture-slides.md  11-inkubator-presentation-slides.md  2-Smart-Contracts-101-slides.md  3-Platform_Agnostic_Bytecode-slides.md  4-PVM-slides.md  5-History_of_Contracts_on_Polkadot-slides.md  6-0-smart-contracts-polkadot-slides.md  6-1-Revive-compiler-slides.md  6-2-pallet-revive-runtime-slides.md  6-3-Blockchain_Asset-Hub-slides.md  8-Hackathon-slides.md  README.md  index.md
content/6-Protocol_On-Chain/: README.md  Zombienet-slides.md  index.md
content/6-Protocol_On-Chain/FRAME/simple-runtime/: Cargo.toml  dispatch.rs  expanded.rs  lib.expanded.rs  rustfmt.toml
content/6-Protocol_On-Chain/FRAME/simple-runtime/dispatch-pallet/: Cargo.toml  expanded.rs
content/6-Protocol_On-Chain/FRAME/simple-runtime/dispatch-pallet/src/: lib.rs
content/6-Protocol_On-Chain/FRAME/simple-runtime/simple-pallet/: Cargo.toml  expanded.rs
content/6-Protocol_On-Chain/FRAME/simple-runtime/simple-pallet/src/: lib.rs
content/6-Protocol_On-Chain/FRAME/simple-runtime/src/: lib.rs
content/6-Protocol_On-Chain/FRAME/simple-runtime/transfer-pallet/: Cargo.toml  expanded.rs
content/6-Protocol_On-Chain/FRAME/simple-runtime/transfer-pallet/src/: lib.rs
content/7-dApps_Off-Chain/: 1-1-polkadot-js-origins-slides.md  1-2-polkadot-js-what-is-it-slides.md  1-3-polkadot-js-importance-slides.md  1-4-polkadot-js-when-to-use-slides.md  1-5-polkadot-js-limitations-slides.md  1-6-polkado-js-future-slides.md  2-papi-starter-slides.md  3-metadata-slides.md  4-json-rpc-spec-slides.md  5-transactions-slides.md  6-polkadot-api-slides.md  7-papi-sdks-slides.md  index.md
content/8-Governance/: Presentation-slides.md  README.md  index.md
content/9-Polkadot/: 1-polkadot-reintroduction-slides.md  14-jam-math-to-code-slides.md  2-staking-slides.md  (+10 more)
(+312 files in other folders)
